feat: publish stats discovery in capabilities