@@ -1,6 +1,8 @@
 package org.praxisplatform.uischema.stats;
 
 import java.util.Collection;
+import java.util.Collections;
+import java.util.List;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -50,7 +52,7 @@ public final class StatsFieldRegistry {
             }
             map.put(descriptor.field(), descriptor);
         }
-        return new StatsFieldRegistry(Map.copyOf(map));
+        return new StatsFieldRegistry(Collections.unmodifiableMap(map));
     }
 
     /**
@@ -73,6 +75,15 @@ public final class StatsFieldRegistry {
             return Optional.empty();
         }
         return Optional.ofNullable(fields.get(field));
+    }
+
+    /**
+     * Lista os descritores canonicos publicados pelo registry.
+     *
+     * @return descritores elegiveis em ordem deterministica
+     */
+    public List<StatsFieldDescriptor> descriptors() {
+        return List.copyOf(fields.values());
     }
 
     /**
